<resources>
    <string name="app_name">Point System</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC_FdHM0UTVEEbUo8-Wrqh18_a6pUNEBz8</string>


    <string name="menu">Menu...</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="item_name">Item Name</string>
    <string name="group_name">Group Name</string>
    <string name="description">Description</string>
    <string name="price">50$</string>
    <string name="price_item">Price</string>
    <string name="ar">عربي</string>
    <string name="en">En</string>
    <string name="category">Category ...</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>

    <string name="floor_no">Floor Number</string>
    <string name="table_no">Table Number</string>
    <string name="no_of_seats">No of Seats</string>
    <string name="done">Done</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="type_message">Type your message here..</string>
    <string name="send">Send</string>

    <string name="whats_app">Whats App</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="recipt">Recipt</string>
    <string name="point">Points</string>
    <string name="total_Qty">Total Qty</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="cash">Cash</string>
    <string name="cancel">Cancel</string>
    <string name="receved">Receved</string>
    <string name="remaining">Remaining</string>
    <string name="qty">Qty</string>
    <string name="tax">Tax</string>
    <string name="barcode">Barcode</string>
    <string name="required_filed">Required Filed</string>

</resources>
