<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@drawable/purple_background"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Check Out"
            android:textColor="@color/black_light_2"
            android:textSize="35sp" />

        <LinearLayout
            android:id="@+id/billLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/alpha_frame"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="@string/total"
                    android:textAllCaps="false"
                    android:textColor="@color/white_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_total_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/items_stroke"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"

                    android:text="@string/receved"
                    android:textAllCaps="false"
                    android:textColor="@color/white_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/recceved_money_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/items_stroke"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:padding="5dp"
                    android:text=""
                    android:textColor="@color/white_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="@string/remaining"
                    android:textAllCaps="false"
                    android:textColor="@color/white_dark"


                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/remaining_Textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/items_stroke"

                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text=""
                    android:textColor="@color/white_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@drawable/back_white"

                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/back_white"

                android:fontFamily="cursive"
                android:text="@string/cancel"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>