<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="550dp"
    android:layout_height="700dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/purple_background"
    android:layoutDirection="ltr"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="550dp"
        android:layout_height="700dp"
        android:background="@color/white_two"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/recipt"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:textColor="@color/purple"
            android:textSize="40sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_height="40dp"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"

                android:textColor="@color/purple"

                android:gravity="center"
                android:layout_marginRight="2dp"

                android:textSize="20sp"

                android:text=" name"

                />

            <TextView
                android:id="@+id/Qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/purple"
                android:gravity="center"
                android:layout_marginRight="2dp"
                android:fontFamily="casual"

                android:textSize="20sp"
                android:text="Qty"

                />

            <TextView
                android:id="@+id/TotalPricre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:layout_marginRight="2dp"
                android:fontFamily="casual"

                android:textSize="20sp"
                android:text="Price"
                android:textAllCaps="false"
                android:textColor="@color/purple"

                />
            <TextView
                android:id="@+id/point_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="Point"

                android:layout_marginRight="2dp"

                android:textSize="20sp"
                android:textColor="@color/purple"
                />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/items_detail_Recycler"
            android:layout_width="match_parent"

            android:layout_margin="10dp"
            android:background="@drawable/alpha_frame"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2" />
        <LinearLayout
            android:id="@+id/billLayout"
            android:background="@drawable/back_white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:textColor="@color/purple"
                    android:text="@string/total_Qty" />

                <TextView
                    android:id="@+id/textView_qty"
                    android:layout_width="0dp"
                    android:textColor="@color/purple"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:textColor="@color/purple"
                    android:layout_weight="1"
                    android:text="@string/point" />

                <TextView
                    android:id="@+id/textView_point"
                    android:layout_width="0dp"
                    android:textColor="@color/purple"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:textColor="@color/purple"
                    android:layout_weight="1"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/textView_total"
                    android:layout_width="0dp"
                    android:textColor="@color/purple"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/cash_pay"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cash"
            android:textColor="@color/purple"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:background="@drawable/back_white"/>
    </LinearLayout>

</LinearLayout>