<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    android:background="@drawable/purple_background"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_two">
    <LinearLayout
        android:id="@+id/call_us_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/alpha_frame"
        android:orientation="vertical"
       >

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="+962 771486544"
            android:textColor="@color/purple"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:text="06 3557744"
            android:textColor="@color/purple"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/textView13"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/corner_background"
        android:padding="5dp"
        android:src="@drawable/ic_call_white_48dp"
        android:textColor="@color/white_dark"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/call_us_linear_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/alpha_frame"
        android:orientation="vertical">

        <TextView
            android:id="@+id/call_us_message"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:hint="@string/type_message"
            android:textColor="@color/white_dark"
            android:textColorHint="@color/purple"
            android:paddingTop="50dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/textView20"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/corner_background"
        android:src="@drawable/ic_email_white_48dp"
        android:text="@string/email"
        android:textColor="@color/white_dark"
        android:textSize="25sp" />

    <Button
        android:id="@+id/call_us_send"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_below="@+id/call_us_linear_two"
        android:background="@drawable/btn_background"
        android:textColor="@color/white_dark"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:fontFamily="casual"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="20dp"
        android:text="@string/send" />
</RelativeLayout>
</RelativeLayout>